add missing index.js and script on package.json
Signed-off-by: Erick Wendel <erick.workspace@gmail.com>

--- a/recorded/package.json
+++ b/recorded/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "npx mocha --parallel --exit test/",
     "test:dev": "npx mocha test/ -w",
     "test:cov": "npx nyc --reporter=html npm test"
